<resources>
    <string name="app_name">MSUConnect</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="maps">Maps</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="aboutInfo">MSUConnect is an application that pulls in the latest MSUDenver events and maps them into the correct buildings.
        \nThis application was created by 6 students at MSU Denver for a software development and tools class.\nAny and all questions should be directed towards any of the following members:</string>
    <string name="versionName">1.0</string>
    <string name="austin">Austin Gailey</string>
    <string name="austinGit">https://github.com/AustinGailey</string>
    <string name="brad">Bradley Isaacs</string>
    <string name="bradGit">https://github.com/bradkIsaacs</string>
    <string name="mich">Michael Boykin</string>
    <string name="michGit">https://github.com/Boykinmr</string>
    <string name="omar">Omar Martinez</string>
    <string name="omarGit">https://github.com/LumiumEngine</string>
    <string name="ray">Raymond Ortiz</string>
    <string name="rayGit">https://github.com/delusionallyhere</string>
    <string name="rin">Rin Isobe</string>
    <string name="rinGit">https://github.com/kobmofo</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    //BitMoji Scope Array
    <string-array name="snap_kit_scopes">
        <item>South Harmon Institute of Technology</item>
        <item>Blue Mountain State</item>
        <item>Greendale Community College</item>
    </string-array>

    <string name="ProfileView_App_Name">MSUConnect Profile Page</string>
    <string name="ProfileView_Switch_Broadcast">Broadcast Location</string>
    <string name="ProfileView_FormTitle_Name">Name:</string>
    <string name="ProfileView_Form_Name">Michael Boykin</string>
    <string name="ProfileView_FormTitle_Interests">Interests:</string>
    <string name="ProfileView_Form_Interests">Interests List Lookup</string>
    <string name="ProfileView_FormTitle_StudyGroups">Study Groups:</string>
    <string name="ProfileView_Form_StudyGroups">Study Groups List Lookup</string>
    <string name="ProfileView_Image_Content">Image of User</string>

    <string name="main_DrawerNav_Profile">Profile</string>
    <string name="main_DrawerNav_Settings">Settings</string>
    <string name="main_DrawerNav_Map">Map</string>

    <string name="notDone">No Code Implemented</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MSU Connect</string>
    <string name="nav_header_subtitle">Need New Text Here</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
