<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/login"
                android:icon="@drawable/ic_menu_signin"
                android:title="@string/login"/>
        <item
                android:id="@+id/profile"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/profile"/>
        <item
                android:id="@+id/maps"
                android:icon="@drawable/ic_menu_map"
                android:title="@string/maps"/>
        <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings"/>
        <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_menu_signout"
                android:title="@string/logout"
                android:visible="false" />
    </group>

</menu>